[package]
name = "rust-constructor"
version = "2.2.0"
edition = "2024"
authors = ["ChepleBob <Cheple_Bob@outlook.com>"]
description = "A cross-platform GUI framework built on egui, the simplest way to develop GUI projects in Rust."
license = "MIT"
readme = "README.md"
keywords = ["develop", "gui"]
repository = "https://github.com/ChepleBob30/Rust-Constructor"
categories = ["gui", "development-tools", "game-development"]
homepage = "https://github.com/ChepleBob30/Rust-Constructor"

[lib]
name = "rust_constructor"
path = "src/lib.rs"

[dependencies]
egui = "0.33.0"
eframe = "0.33.0"
kira = "0.10.8"
anyhow = "1.0.100"
image = "0.25.8"
json = "0.12.4"
chrono = "0.4.42"