[package]
name = "rust-constructor"
version = "2.7.0"
edition = "2024"
authors = ["ChepleBob <Cheple_Bob@outlook.com>"]
description = "A cross-platform GUI framework built on egui, the simplest way to develop GUI projects in Rust."
license = "MIT"
readme = "README.md"
keywords = ["develop", "gui"]
repository = "https://github.com/ChepleBob30/Rust-Constructor"
categories = ["gui", "development-tools", "game-development"]
homepage = "https://github.com/ChepleBob30/Rust-Constructor"

[lib]
name = "rust_constructor"
path = "src/lib.rs"

[dependencies]
egui = "0.33.3"
eframe = "0.33.3"
image = "0.25.9"
chrono = "0.4.43"
