[package]
name = "rust-constructor"
version = "2.11.4"
edition = "2024"
authors = ["ChepleBob <Cheple_Bob@outlook.com>"]
description = "A cross-platform `GUI` framework built on `egui` as well as compatible with `bevy`, the simplest way to develop `GUI` projects with `Rust`."
license = "MIT"
readme = "README.md"
keywords = ["develop", "gui"]
repository = "https://github.com/ChepleBob30/Rust-Constructor"
categories = ["gui", "development-tools", "game-development"]
homepage = "https://github.com/ChepleBob30/Rust-Constructor"

[lib]
name = "rust_constructor"
path = "src/lib.rs"

[dependencies]
egui_standard = { package = "egui", version = "0.34.1", default-features = false, optional = true }
egui_bevy = { package = "egui", version = "0.33.3", default-features = false, optional = true }
image = { version = "0.25.10", default-features = false }
chrono = { version = "0.4.44", default-features = false }
bevy_asset = { version = "0.18.1", default-features = false, optional = true }
bevy_reflect = { version = "0.18.1", default-features = false, optional = true }
log = { version = "0.4.29", default-features = false, features = ["std"] }

[features]
default = ["standard"]
standard = ["egui_standard"]
bevy = ["egui_bevy", "bevy_asset", "bevy_reflect"]
